--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Adesh S\AppData\Local\Temp\testng-eclipse--390849290\testng-customsuite.xml</span>
+                    <span>C:\Users\Adesh S\AppData\Local\Temp\testng-eclipse-1710124181\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -134,9 +134,9 @@ For documentation on this error, please visit: https://www.selenium.dev/document
 Build info: version: &apos;4.33.0&apos;, revision: &apos;2c6aaad03a&apos;
 System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;17.0.2&apos;
 Driver info: io.appium.java_client.android.AndroidDriver
-Command: [394adf47-13a8-4a69-8134-ae011bd172fe, findElement {value=//android.widget.TextView[@text=&quot;Doctor Center&quot;], using=xpath}]
-Capabilities {appium:app: D:\AndroidTest\AndroidTest\..., appium:appActivity: com.itouchtechadminapp.Main..., appium:appPackage: com.itouchtechadminapp, appium:automationName: UiAutomator2, appium:databaseEnabled: false, appium:desired: {app: D:\AndroidTest\AndroidTest\..., automationName: UiAutomator2, deviceName: Medium_Phone_2, platformName: ANDROID}, appium:deviceApiLevel: 33, appium:deviceManufacturer: Google, appium:deviceModel: sdk_gphone64_x86_64, appium:deviceName: emulator-5554, appium:deviceScreenDensity: 420, appium:deviceScreenSize: 1080x2400, appium:deviceUDID: emulator-5554, appium:javascriptEnabled: true, appium:locationContextEnabled: false, appium:networkConnectionEnabled: true, appium:pixelRatio: 2.625, appium:platformVersion: 13, appium:statBarHeight: 63, appium:takesScreenshot: true, appium:viewportRect: {height: 2337, left: 0, top: 63, width: 1080}, appium:warnings: {}, appium:webStorageEnabled: false, platformName: ANDROID}
-Session ID: 394adf47-13a8-4a69-8134-ae011bd172fe
+Command: [e6e322b3-4f24-4d8f-8bf8-4db9bfa72c5b, findElement {using=xpath, value=//android.widget.FrameLayout[@resource-id=&quot;android:id/content&quot;]/android.widget.FrameLayout/android.view.ViewGroup/android.view.ViewGroup/android.view.ViewGroup[2]/android.widget.ScrollView/android.view.ViewGroup/android.view.ViewGroup/android.widget.ScrollView/android.view.ViewGroup/android.widget.ScrollView/android.view.ViewGroup/android.widget.EditText[1]}]
+Capabilities {appium:app: D:\AndroidTest\AndroidTest\..., appium:appActivity: com.itouchtechadminapp.Main..., appium:appPackage: com.itouchtechadminapp, appium:automationName: UiAutomator2, appium:databaseEnabled: false, appium:desired: {app: D:\AndroidTest\AndroidTest\..., automationName: UiAutomator2, deviceName: Samsung_A5, platformName: ANDROID}, appium:deviceApiLevel: 33, appium:deviceManufacturer: Google, appium:deviceModel: sdk_gphone64_x86_64, appium:deviceName: emulator-5554, appium:deviceScreenDensity: 420, appium:deviceScreenSize: 1080x2400, appium:deviceUDID: emulator-5554, appium:javascriptEnabled: true, appium:locationContextEnabled: false, appium:networkConnectionEnabled: true, appium:pixelRatio: 2.625, appium:platformVersion: 13, appium:statBarHeight: 63, appium:takesScreenshot: true, appium:viewportRect: {height: 2337, left: 0, top: 63, width: 1080}, appium:warnings: {}, appium:webStorageEnabled: false, platformName: ANDROID}
+Session ID: e6e322b3-4f24-4d8f-8bf8-4db9bfa72c5b
 	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)
 	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:77)
 	at java.base/jdk.internal.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)
@@ -152,8 +152,8 @@ Session ID: 394adf47-13a8-4a69-8134-ae011bd172fe
 	at org.openqa.selenium.remote.ElementLocation.findElement(ElementLocation.java:59)
 	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:367)
 	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:361)
-	at AndroidTest.AndroidTest.Doctor_Centre.AddDoctor(Doctor_Centre.java:21)
-	at AndroidTest.AndroidTest.TestClass.LoginasTenant(TestClass.java:24)
+	at AndroidTest.AndroidTest.Nurse_Centre.AddNurse(Nurse_Centre.java:36)
+	at AndroidTest.AndroidTest.TestClass.LoginasTenant(TestClass.java:22)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
 	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -191,7 +191,7 @@ Session ID: 394adf47-13a8-4a69-8134-ae011bd172fe
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Adesh S\AppData\Local\Temp\testng-eclipse--390849290\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Adesh S\AppData\Local\Temp\testng-eclipse-1710124181\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -244,12 +244,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'LoginasTenant')
 data.setCell(0, 2, 'AndroidTest.AndroidTest.TestClass')
-data.setCell(0, 3, 134625);
+data.setCell(0, 3, 58039);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 minutes</span>
+              <span class="suite-total-time">Total running time: 58 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
